--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -152,6 +152,7 @@ The next three devices are repetitions of a pattern of similar sounds, like rhym
 We aim to detect and reproduce all forms of sound devices explained here. However, there will be a limit to the onomatopoeic vocabulary and it will be unable to create brand new onomatopoeia.
 
 \subsubsection{Structure}
+\label{sec:structure}
 The structure of the poem is the organisation of lines in a poem. The main unit is the stanza, which is a fixed amount of lines grouped by rhythmical pattern.
 
 There are four major types of stanza:
@@ -170,6 +171,7 @@ Features of the structure of a poem include:
 \item{The number of lines per stanza.}
 \item{The number and positions of repeated lines.}
 \item{The number and positions of repeated stanzas.}
+\item{Enjambment; the continuation of a sentence over a line-break}
 \end{itemize} 
 
 The Haiku in Figure \ref{fig:haiku} has a single tercet structure with no repetitions. Songs are generally several stanzas long, with a chorus interleaving longer non-repeating verses.
